# c-pl-coding

./: CMakeLists.txt  README.md
c-gaming-TongXing/: CMakeLists.txt
c-gaming-TongXing/1-1-ball/: CMakeLists.txt  README.md  bouncing-ball.c  falling-ball.c  one-ball.c  reflecting-ball.c
c-gaming-TongXing/1-2-plane/: CMakeLists.txt  README.md  instant-motion.c  motion.c
lectures/: CMakeLists.txt  README.md
lectures/guess-the-number/: guess.c
lectures/hello-world/: CMakeLists.txt
lectures/io/: CMakeLists.txt  io.c  scan.c
lectures/types/: character.c  floating.c  integral.c
ncurses/: CMakeLists.txt  README.md
ncurses/basics/: CMakeLists.txt  acs  acs.c  chgat  chgat.c  color  color.c  comments-in-bold  comments-in-bold.c  hello-world  hello-world.c  init  init.c  key  key.c  more-border  more-border.c  mouse  mouse.c  printw  printw.c  scanw  scanw.c  window-border  window-border.c
ncurses/for-fun/: hanoi  hanoi.c  life  life.c  magic  magic.c  queens  queens.c  shuffle  shuffle.c  typing-tutor  typing-tutor.c
ncurses/forms/: form-attributes  form-attributes.c  form-basics  form-basics.c  form-field-options  form-field-options.c  form-windows  form-windows.c
ncurses/menus/: menu-basics  menu-basics.c  menu-multicol  menu-multicol.c  menu-multival  menu-multival.c  menu-options  menu-options.c  menu-scrolling  menu-scrolling.c  menu-user-pointer  menu-user-pointer.c  menu-window  menu-window.c
ncurses/panels/: panel-basics  panel-basics.c  panel-browsing  panel-browsing.c  panel-hiding-showing  panel-hiding-showing.c  panel-moving-resizing  panel-moving-resizing.c
