add_executable(one-ball 1-1-ball/one-ball.c)
add_executable(falling-ball 1-1-ball/falling-ball.c)
add_executable(bouncing-ball 1-1-ball/bouncing-ball.c)
add_executable(reflecting-ball 1-1-ball/reflecting-ball.c)

add_executable(motion 1-2-plane/motion.c)
add_executable(instant-motion 1-2-plane/instant-motion.c)
