add_executable(hello-world-ncurses basics/hello-world.c)
add_executable(init basics/init.c)
add_executable(printw basics/printw.c)
add_executable(scanw basics/scanw.c)
add_executable(comments-in-bold basics/comments-in-bold.c)
add_executable(chgat basics/chgat.c)
add_executable(window-border basics/window-border.c)
add_executable(more-border basics/more-border.c)
