add_executable(hello-world-ncurses basics/hello-world.c)
add_executable(init basics/init.c)
add_executable(printw basics/printw.c)
add_executable(scanw basics/scanw.c)
add_executable(comments-in-bold basics/comments-in-bold.c)
add_executable(chgat basics/chgat.c)
add_executable(window-border basics/window-border.c)
add_executable(more-border basics/more-border.c)
add_executable(color basics/color.c)
add_executable(key basics/key.c)
#target_link_libraries(key -lncurses)
add_executable(mouse basics/mouse.c)
#target_link_libraries(mouse -lncurses)
add_executable(acs basics/acs.c)

add_executable(panel-basics panels/panel-basics.c)
add_executable(panel-browsing panels/panel-browsing.c)
add_executable(panel-moving-resizing panels/panel-moving-resizing.c)
add_executable(panel-hiding-showing panels/panel-hiding-showing.c)